# QtWidget

./: CMakeLists.txt  main.cpp
